actually commit everything because I have no idea what happened last commit and push